<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="30dp"
                android:background="@color/buttonColor"
                android:gravity="center_horizontal"
                android:text="@string/txt_title"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_first_name"

                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_last_name"

                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:id="@+id/txtSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal"
                android:text="@string/spinnerText"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="381dp"
                android:layout_height="23dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp" />


            <EditText
                android:id="@+id/txtCourseName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/txt_hint_course_name"
                android:importantForAutofill="no"
                android:inputType="text" />

            <EditText
                android:id="@+id/txtNumberCod"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_number_cod"
                android:importantForAutofill="no"
                android:inputType="number"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"

                    android:background="@color/buttonColor"
                    android:text="@string/btn_reset" />

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/buttonColor"
                    android:text="@string/btn_save" />

            </LinearLayout>


            <Button
                android:id="@+id/buttonFinish"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@color/buttonColor"
                android:text="@string/btn_finish" />


        </LinearLayout>


    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>